[build-system]
requires = ["hatchling"]
build-backend = 'hatchling.build'

[project]
name = "hundred-coverage"
description = "Increasing the coverage of your Python project"
readme = "README.md"
authors = [
    { name = "Andresa Valério", email = "andresalvalerio@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0,<0.10.0",
    "rich>=13.0.0,<14.0.0",
]
optional-dependencies = {}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/andresavalerio/hundred-coverage"
Source = "https://github.com/andresavalerio/hundred-coverage"
Twitter = "https://twitter.com/valerioandresa"
Funding = "https://github.com/sponsors/andresavalerio"

[project.scripts]
hundred-coverage = "hundred_coverage.__main__:app"

[tool.hatch.version]
path = "hundred_coverage/__init__.py"

[tool.hatch.envs.dev]
dependencies = [
    "black",
    "mypy",
    "ruff",
    "pre-commit",
    "bpython",
]

[tool.hatch.envs.test]
dependencies = [
    "coverage[toml]",
    "pytest",
    "pytest-sugar",
    "dirty-equals",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.mypy]
strict = true

[tool.black]
target-version = ["py38"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
filterwarnings = ["error"]

[tool.coverage.run]
source_pkgs = ["hundred_coverage", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
